--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3",
+    "react-scroll-progress-bar": "^1.1.13",
     "uvcanvas": "^0.2.1"
   },
   "devDependencies": {
